--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -72,6 +72,161 @@
 	.navbar-nav {
 		flex-direction: row;
 	}
+	.dropdown {
+		position: relative;
+		span {
+			position: relative;
+			&:after {
+				top: 7px;
+				z-index: 2;
+				right: -17px;
+				content: "\2b";
+				font-size: 12px;
+				font-weight: 700;
+				font-weight: 900;
+				position: absolute;
+				color: #000;
+				font-family: 'Font Awesome 5 free';
+				transition: 0.3s all ease-in-out;
+			}
+		}
+		&:hover {
+			.dropdown-menu {
+				visibility: visible;
+				opacity: 1;
+				clip: inherit;
+				-webkit-transform: scaleY(1);
+				-khtml-transform: scaleY(1);
+				-moz-transform: scaleY(1);
+				-ms-transform: scaleY(1);
+				-o-transform: scaleY(1);
+				transform: scaleY(1);
+			}
+		}
+	}
+	.dropdown-menu {
+		left: 0;
+		top: 42px;
+		z-index: 100;
+		margin: 0px;
+		padding: 4px 4px 15px;
+		height: auto;
+		min-width: 270px;
+		display: block;
+		border: none;
+		border-radius: 0;
+		position: absolute;
+		opacity: 0;
+		background: #fff;
+		border-radius: 10px;
+		transform: scaleY(0);
+		transform-origin: 0 0 0;
+		-webkit-transform-origin: 0 0 0;
+		-ms-transform-origin: 0 0 0;
+		-o-transform-origin: 0 0 0;
+		text-align: left;
+		transition: all .3s ease-in-out;
+		box-shadow: -8px 8px 24px 0px rgba(0, 0, 0, 0.08);
+		.dropdown {
+			padding-right: 0;
+			padding-left: 0;
+			&:after {
+				display: none;
+			}
+		}
+		.dropdown-menu {
+			top: 0px !important;
+			left: 100%;
+			transform-origin: 0 0 0;
+			-webkit-transform-origin: 0 0 0;
+			-ms-transform-origin: 0 0 0;
+			-o-transform-origin: 0 0 0;
+			transform: scaleY(0) !important;
+		}
+		li {
+			display: block;
+			margin: 5px 0px !important;
+			transition: .3s all ease-in-out;
+			border-left: none !important;
+			&:last-child {
+				border-bottom: none;
+				margin-bottom: 0 !important;
+				a {
+					padding-bottom: 0 !important;
+					border-bottom: none !important;
+				}
+			}
+			&:before {
+				display: none;
+			}
+			&:after {
+				color: #fff;
+				right: 15px;
+				transform: rotate(-90deg);
+				transition: .3s all ease-in-out;
+			}
+			&.dropdown:hover {
+				&:after {
+					transform: rotate(0);
+				}
+				.dropdown-menu {
+					top: 0; 
+					transform: scaleY(1) !important;
+				}
+			}
+			&.dropdown {
+				&:before {
+					color: #fff;
+					top: 10px;
+					right: 15px;
+				}
+			}
+			&:hover {
+				&:before {
+					color: #fff !important;
+				}
+			}
+		}
+		a {
+			width: 100%;
+			line-height: 1;
+			color: #000 !important;
+			position: relative;
+			border-radius: 0 !important;
+			border-bottom: 1px solid #d7d7d7;
+			display: inline-block !important;
+			padding: 12px  0px 12px 18px !important;
+			font-weight: 500 !important;
+			font-size: 14px !important;
+			border: none !important;
+			background-color: transparent !important;
+			span {
+				&:after {
+					display: none;
+				}
+			}
+			&:before {
+				display: none;
+			}
+			&:after {
+				display: none;
+			}
+			&:hover,
+			&.active {
+				color:  var(--st-prime-c) !important;
+				padding-left: 30px !important;
+				&:after {
+					width: 100%;
+				}
+				&:before {
+					opacity: 1;
+					width: 5px !important;
+					visibility: visible;
+					transform: scale(1.0) !important;
+				}
+			}
+		}
+	}
 	.st-mobile-menu-btn {
 		display: none;
 		margin-left: 20px;
@@ -257,15 +412,29 @@
 				}
 				a {
 					gap: 16px;
+					z-index: 1;
 					font-size: 16px;
 					display: flex;
 					font-weight: 500;
+					overflow: hidden;
 					align-items: center;
 					border-radius: 6px;
+					position: relative;
 					justify-content: center;
 					background-color: #EFEFEF;
 					padding: 8px 8px 8px 20px;
 					font-family: var(--st-heading);
+					&:before {
+						top: 0;
+						left: 0;
+						z-index: -1;
+						width: 0%;
+						height: 100%;
+						content: '';
+						position: absolute;
+						transition: all 400ms ease-in-out;
+						background-color: var(--st-prime-c);
+					}
 					i {
 						width: 32px;
 						height: 32px;
@@ -274,6 +443,12 @@
 						align-items: center;
 						justify-content: center;
 						background-color: #00161A;
+					}
+					&:hover {
+						color: #fff;
+						&:before {
+							width: 100%;
+						}
 					}
 				}
 			}
@@ -286,4 +461,479 @@
 			}
 		}
 	}
+}
+/*// Mobile Menu style*/
+/*----------------------------------------------------*/
+.mobile_logo {
+	top: 10px;
+	left: 15px;
+	display: none;
+	position: absolute;
+}
+.mobile_menu_content {
+	top: 0px;
+	bottom: 0;
+	left: -100%;
+	height: 100vh;
+	z-index: 101;
+	position: fixed;
+	width: 100%;
+	max-width: 500px;
+	overflow-y: scroll;
+	background-color: #0f0d0d;
+	padding: 20px 20px 35px 20px;
+	box-shadow: 0px 3px 5px rgba(100, 100, 100, .19);
+	transition: all 0.5s ease-in;
+	&::-webkit-scrollbar {
+		width: 6px;
+	}
+
+	&::-webkit-scrollbar-track {
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	}
+
+	&::-webkit-scrollbar-thumb {
+		outline: none;
+		border-radius: 0px;
+		background: #000;
+		background-size: 200%, 1px;
+	}
+	.mobile-main-navigation {
+		width: 100%;
+		.navbar-nav {
+			width: 100%;
+		}
+	}
+	.dropdown:after {
+		display: none;
+	}
+	.navbar-nav .dropdown-menu {
+		position: static !important;
+		transform: none !important;
+	}
+	.mobile-main-navigation .navbar-nav li {
+		padding: 0;
+		width: 100%;
+		display: block;
+		transition: .3s all ease-in-out;
+		border-bottom: 1px solid rgba(255, 255, 255, 6%);
+		a {
+			padding: 0;
+			width: 100%;
+			color: #fff;
+			display: block;
+			font-weight: 500;
+			font-size: 18px;
+			text-transform: capitalize;
+			padding: 10px 30px 10px 0;
+		}
+	}
+	.m-brand-logo {
+		width: 120px;
+		margin: 50px auto;
+	}
+}
+.mobile_menu_wrap.mobile_menu_on .mobile_menu_content {
+	left: 0px;
+	transition: all 0.7s ease-out;
+}
+.mobile_menu_overlay {
+	top: 0;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 100;
+	right: 0%;
+	height: 120vh;
+	opacity: 0;
+	visibility: hidden;
+	background-color: rgba(0, 0, 0, .9);
+	transition: all .5s ease-in-out;
+}
+.mobile_menu_overlay_on {
+	overflow: hidden;
+}
+.mobile_menu_wrap.mobile_menu_on .mobile_menu_overlay{
+	opacity: 1;
+	visibility: visible;
+}
+.mobile_menu_button {
+	z-index: 5;
+	padding: 0;
+	border: none;
+	display: none;
+	font-size: 24px;
+	cursor: pointer;
+	margin-left: 10px;
+	line-height: 38px;
+	text-align: center;
+	background-color: transparent;
+	span {
+		width: 30px;
+		height: 2px;
+		display: block;
+		margin-bottom: 5px;
+		background-color: #fff;
+		&:nth-child(2) {
+			width: 25px;
+		}
+		&:last-child {
+			width: 20px;
+			margin-bottom: 0;
+		}
+	}
+	@media #{$md,$sm,$xs} {
+		display: block;
+	}
+}
+.mobile_menu{
+	.mobile-main-navigation .navbar-nav li a:after {
+		display: none;
+	}
+	.mobile-main-navigation .dropdown > .dropdown-menu {
+		opacity: 1;
+		visibility: visible;
+	}
+	.mobile_menu_content .mobile-main-navigation .navbar-nav {
+		li {
+			a {
+				font-size: 20px;
+				font-weight: 700;
+			}
+		}
+		.dropdown-menu {
+			width: 100%;
+			border: none;
+			display: none;
+			transition: none;
+			box-shadow: none;
+			margin-bottom: 15px;
+			background-color: transparent;
+			li {
+				border: none;
+				line-height: 1;
+				&:hover {
+					background-color: transparent;
+				}
+				a {
+					font-size: 18px;
+					font-weight: 700;
+					padding-left: 20px;
+					color: #fff !important;
+					&:hover {
+						color: var(--base-color);
+						background-color: transparent;
+					}
+				}
+			}
+		}
+	}
+	.dropdown {
+		position: relative;
+		.dropdown-btn {
+			top: 4px;
+			right: 0;
+			width: 100%;
+			height: 40px;
+			display: flex;
+			color: #9397a7;
+			font-size: 16px;
+			cursor: pointer;
+			position: absolute;
+			border-radius: 5px;
+			align-items: center;
+			justify-content: end;
+			&.toggle-open {
+				transform: rotate(90deg);
+			}
+		}
+	}
+	.mobile_menu_close {
+		top: 25px;
+		right: 25px;
+		cursor: pointer;
+		color: #d60606;
+		font-size: 20px;
+		position: absolute;
+	}
+	.mobile-search-bar {
+		overflow: hidden;
+		border-radius: 5px;
+		margin-bottom: 40px;
+		input {
+			color: #fff;
+			width: 100%;
+			height: 60px;
+			border: none;
+			font-size: 14px;
+			padding-left: 15px;
+			border-radius: 5px;
+			border-bottom: none;
+			background-color: #2d2d2d;
+			&::placeholder {
+				color: #fff;
+				font-size: 14px;
+			}
+		}
+		button {
+			top: 5px;
+			padding: 0;
+			right: 10px;
+			color: #fff;
+			width: 50px;
+			height: 50px;
+			border: none;
+			position: absolute;
+			background-color: transparent;
+		}
+	}
+	.ptx-mobile-header-social {
+		margin-top: 40px;
+		a {
+			color: #fff;
+			margin: 0px 8px;
+			font-size: 15px;
+			&:hover {
+				color: var(--ra-base-c1);
+			}
+		}
+	}
+}
+/*// off canvas style*/
+/*----------------------------------------------------*/
+.sidebar-info-contents {
+	position: relative;
+}
+
+.sidebar-info-contents .content-inner {
+	position: relative;
+}
+
+.sidebar-info-contents .content-inner .logo {
+	padding-bottom: 20px;
+	max-width: 180px;
+}
+
+.sidebar-info-contents .content-inner .logo img {
+	display: inline-block;
+	max-width: 100%;
+}
+
+.sidebar-info-contents .content-inner .content-box {
+	position: relative;
+	margin-top: 50px;
+}
+
+.sidebar-info-contents .content-inner h5 {
+	color: #fff;
+	font-weight: 700;
+	margin: 25px 0px 15px;
+}
+
+.sidebar-info-contents .content-inner .content-box .text {
+	color: #fff;
+	margin-bottom: 35px;
+}
+
+.sidebar-info-contents .content-inner .social-box {
+	position: relative;
+	margin-top: 0px;
+	padding-left: 0;
+	margin-bottom: 30px;
+}
+
+.sidebar-info-contents .content-inner .social-box li {
+	position: relative;
+	display: inline-block;
+	margin-right: 5px;
+	transition: all 900ms ease;
+	-moz-transition: all 900ms ease;
+	-webkit-transition: all 900ms ease;
+	-ms-transition: all 900ms ease;
+	-o-transition: all 900ms ease;
+}
+
+.sidebar-info-contents .content-inner .social-box li a {
+	position: relative;
+	width: 36px;
+	height: 36px;
+	color: #fff;
+	z-index: 1;
+	font-size: 14px;
+	line-height: 36px;
+	text-align: center;
+	border-radius: 50%;
+	display: inline-block;
+	background-color: rgba(255, 255, 255, 0.1);
+	-webkit-transition: all 500ms ease;
+	transition: all 500ms ease;
+}
+
+.sidebar-info-contents .content-inner .social-box li a:hover {
+	color: #000;
+	background-color: #fff;
+}
+
+.close-side-widget,
+.close-side-widget:hover {
+	color: #fff !important;
+	font-size: 24px;
+}
+
+.xs-sidebar-group .xs-overlay {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	font-size: 0;
+	position: fixed;
+	pointer-events: none;
+}
+.xs-sidebar-group .xs-overlay .loader-area {
+	height: 100vh;
+}
+
+.xs-sidebar-group.info-group .xs-overlay {
+	z-index: 10;
+}
+
+.xs-sidebar-group .preloader-wrap {
+	padding: 0px;
+}
+
+.xs-sidebar-group .loader-area {
+	height: 100vh;
+}
+
+.xs-sidebar-group.info-group.isActive .preloader-wrap .loader-bg {
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	-webkit-transition: 800ms all cubic-bezier(0.77, 0, 0.175, 1);
+	transition: 800ms all cubic-bezier(0.77, 0, 0.175, 1);
+}
+
+.xs-sidebar-group.info-group .preloader-wrap .loader-bg {
+	left: 0;
+	width: 0;
+	opacity: 0;
+	opacity: 0.95;
+	height: 100%;
+	-webkit-transition: 800ms all cubic-bezier(0.1, 0.1, 0.1, 1);
+	transition: 800ms all cubic-bezier(0.1, 0.1, 0.1, 1);
+}
+
+.xs-sidebar-group .widget-heading {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 25px;
+}
+
+.xs-sidebar-widget {
+	position: fixed;
+	right: -100%;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	max-width: 360px;
+	z-index: 20;
+	overflow: hidden;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+	background-color: var(--tz-title-color);
+	-webkit-transition: all 0.5s cubic-bezier(0.9, 0.03, 0, 0.96) 0.6s;
+	transition: all 0.5s cubic-bezier(0.9, 0.03, 0, 0.96) 0.6s;
+	visibility: hidden;
+	opacity: 0;
+}
+
+.xs-sidebar-group.isActive .xs-sidebar-widget {
+	opacity: 1;
+	visibility: visible;
+	right: 0;
+	-webkit-transition: all 0.7s cubic-bezier(0.9, 0.03, 0, 0.96) 0.4s;
+	transition: all 0.7s cubic-bezier(0.9, 0.03, 0, 0.96) 0.4s;
+}
+
+.sidebar-textwidget {
+	padding: 40px 30px;
+}
+
+.close-side-widget {
+	z-index: 2;
+	color: #1768dd;
+	display: block;
+	position: relative;
+	font-size: 15px;
+}
+
+.sidebar-widget-container {
+	position: relative;
+	top: 150px;
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: all 0.3s ease-in 0.3s;
+	transition: all 0.3s ease-in 0.3s;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.xs-sidebar-group.isActive .sidebar-widget-container {
+	top: 0px;
+	opacity: 1;
+	visibility: visible;
+	-webkit-transition: all 1s ease-out 1.2s;
+	transition: all 1s ease-out 1.2s;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.sidebar-info-contents .gallery-box li a {
+	width: 80px;
+	display: block;
+	height: 80px;
+	margin-bottom: 5px;
+	position: relative;
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+.sidebar-info-contents .gallery-box li a:before {
+	top: 0;
+	left: 0;
+	width: 0%;
+	content: "";
+	height: 100%;
+	position: absolute;
+	-webkit-transition: 500ms all ease;
+	transition: 500ms all ease;
+	background-color: rgb(0, 0, 0);
+}
+.sidebar-info-contents .gallery-box li a:after {
+	left: 0;
+	right: 0;
+	top: 40%;
+	opacity: 0;
+	color: #fff;
+	font-size: 18px;
+	content: "\f066";
+	font-weight: 900;
+	text-align: center;
+	position: absolute;
+	-webkit-transition: 500ms all ease;
+	transition: 500ms all ease;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+	font-family: "Font Awesome 5 free";
+}
+.sidebar-info-contents .gallery-box li a:hover:before {
+	width: 100%;
+}
+.sidebar-info-contents .gallery-box li a:hover:after {
+	top: 50%;
+	opacity: 1;
 }
