--- a/assets/scss/home_1/_hero.scss
+++ b/assets/scss/home_1/_hero.scss
@@ -117,6 +117,10 @@
  			background-color: #575B59;	
  			border: 1px solid #FFFFFF70;
  			font-family: var(--st-heading);
+ 			&:hover {
+ 				color: #000;
+ 				background-color: var(--st-prime-c2);
+ 			}
  		}
  	}
  }
@@ -142,9 +146,14 @@
  		height: 100%;
  		overflow: hidden;
  		border-radius: 20px;
+ 		img {
+ 			transition: all 800ms ease-in-out;
+ 			transform: scale(1.1) translateX(30px);
+ 		}
  		&:before {
  			top: 0;
  			left: 0;
+ 			z-index: 1;
  			width: 100%;
  			height: 100%;
  			content: '';
@@ -175,6 +184,14 @@
  			line-height: 1.0667;
  			letter-spacing: -1px;
  			padding-bottom: 25px;
+ 			.split-line {
+ 				overflow: hidden;
+ 				transform: translateY(100%) scaleY(-0.6);
+ 				opacity: 0;
+ 				padding-bottom: 5px;
+ 				transition:  .8s var(--cube-1);
+ 				transition-delay: 0s;
+ 			}
  			@media #{$sm} {
  				font-size: 50px;
  			}
@@ -187,6 +204,65 @@
  		}
  		p {
  			color: #fff;
+ 			transition: all 1200ms ease-in-out;
+ 			clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+ 		}
+ 		.st-btn {
+ 			opacity: 0;
+ 			transform: scaleY(0);
+ 			transform-origin: top;
+ 			transition: all 1000ms ease;
+ 			a {
+ 				&:before {
+ 					background-color: #fff;
+ 				}
+ 				&:hover {
+ 					color: var(--st-title-color);
+ 					i {
+ 						background-color: var(--st-title-color);
+ 					}
+ 				}
+ 			}
+ 		}
+ 	}
+ }
+
+ .swiper-slide-active {
+ 	.st-hero-item {
+ 		.item-img {
+ 			img {
+ 				transform: scale(1) translateX(0px);
+ 			}
+ 		}
+ 		.st-hero-text {
+ 			.hero_text {
+ 				.split-line {
+ 					transform: translateY(0%) scaleY(1);
+ 					opacity: 1;
+ 					transition-delay: 0.7s;
+ 					&:nth-child(2) {
+ 						transition-delay: 0.9s;
+ 					}
+ 					&:nth-child(3) {
+ 						transition-delay: 1.1s;
+ 					}
+ 					&:nth-child(4) {
+ 						transition-delay: 1.3s;
+ 					}
+ 					&:nth-child(5) {
+ 						transition-delay: 1.5s;
+ 					}
+ 				}
+ 			}
+ 			p {
+ 				transition-delay: 600ms;
+ 				clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+ 			}
+ 			.st-btn { 
+ 				opacity: 1;
+ 				transform: scaleY(1);
+ 				transition-delay: 900ms;
+ 			}
  		}
  	}
  }
