--- a/assets/scss/home_1/_why-c.scss
+++ b/assets/scss/home_1/_why-c.scss
@@ -6,8 +6,9 @@
 }
 .st-wc-title {
 	z-index: 1;
+	width: 100%;
 	display: flex;
-	max-width: 500px;
+	max-width: 520px;
 	flex-wrap: wrap;
 	position: relative;
 	flex-direction: column;
@@ -16,10 +17,24 @@
 		.sec_title {
 			font-size: 60px;
 			font-weight: 700;
+			.split-line {
+				padding: 5px 12px;
+				border-radius: 12px;
+				margin-bottom: -5px;
+				background-color: #fff;
+				display: inline-block !important;
+			}
 		}
 	}
 	.wc-title-desc {
 		max-width: 340px;
+	}
+	.st-btn {
+		a {
+			&:before {
+				background-color: var(--st-title-color);
+			}
+		}
 	}
 }
 .st-wc-list-area {
@@ -43,7 +58,7 @@
 	max-width: 560px;
 	overflow: hidden;
 	border-radius: 12px;
-	margin-left: -130px;
+	margin-left: -150px;
 	@media #{$lg,$md,$sm,$xs,$xxs} {
 		margin-left: 0;
 	}
