--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -191,9 +191,19 @@
 		font-size: 340px;
 		font-weight: 700;
 		line-height: 1.5;
+		position: relative;
 		background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
 		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent; 
+		-webkit-text-fill-color: transparent;
+		&:before {
+			left: 0;
+			top: 120px;
+			width: 100%;
+			height: 250px;
+			content: '';
+			position: absolute;
+			background: linear-gradient(180deg, #00161A 0%, rgba(0, 22, 26, 0) 100%);
+		} 
 	}
 	.st-ftr-border {
 		left: 0;
@@ -205,7 +215,7 @@
 			height: 6px;
 			width: 100%;
 			margin-bottom: 8px;
-			background-color: #FFFFFF;
+			background-color: #cfcfcf;
 			&:nth-child(2) {
 				margin-bottom: 12px;
 			}
