--- a/assets/scss/home_1/_service.scss
+++ b/assets/scss/home_1/_service.scss
@@ -46,12 +46,18 @@
 		.st-btn {
 			a {
 				background-color: #fff;
+				padding: 8px 8px 8px 20px;
 				color: var(--st-title-color);
 				i {
+					width: 24px;
+					height: 24px;
 					background-color: var(--st-title-color);
 				}
 				&:hover {
 					color: #fff;
+					i {
+						background-color: var(--st-prime-c);
+					}
 				}
 			}
 		}
