--- a/assets/scss/home_1/_testi.scss
+++ b/assets/scss/home_1/_testi.scss
@@ -26,15 +26,23 @@
 	}
 }
 .st-testi-item {
+	overflow: hidden;
 	border-radius: 24px;
 	background: radial-gradient(100% 390.96% at 100% 100%, #FFFFFF 0%, #FFE3D7 50%, #FFFFFF 100%);
+	.item-bg {
+		top: 0;
+		left: 0;
+		opacity: 0;
+		width: 100%;
+		height: 100%;
+		transition: all 500ms ease-in-out;
+	}
 	.inner-wrap {
 		z-index: 1;
 		gap: 30px 48px;
 		max-width: 870px;
 		padding: 22px 24px;
 		position: relative;
-		mix-blend-mode: luminosity;
 		@media #{$sm,$xs,$xxs} {
 			flex-wrap: wrap;
 		}
@@ -44,6 +52,7 @@
 			overflow: hidden;
 			border-radius: 12px;
 			background-color: #FDD3C1;
+			transition: all 500ms ease-in-out;
 		}
 		.item-text {
 			display: flex;
@@ -69,6 +78,14 @@
 			span {
 				font-size: 14px;
 			}
+		}
+	}
+	&:hover {
+		.item-bg {
+			opacity: 1;
+		}
+		.inner-wrap {
+			mix-blend-mode: luminosity;
 		}
 	}
 }
